@@ -1,3 +1,14 @@
+2021-06-24  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        Unreviewed, build fix for ARM64
+        https://bugs.webkit.org/show_bug.cgi?id=227201
+
+        * ftl/FTLLowerDFGToB3.cpp:
+        (JSC::FTL::DFG::LowerDFGToB3::compileCompareStrictEq):
+        * jit/AssemblyHelpers.cpp:
+        (JSC::AssemblyHelpers::cageWithoutUntagging):
+        (JSC::AssemblyHelpers::cageConditionallyAndUntag):
+
 2021-06-24  Yijia Huang  <yijia_huang@apple.com>
 
         Add a new pattern to instruction selector to utilize BFI supported by ARM64
